objects/CN_Change_Request_Fields_Check__mdt.object
<CustomObject>
    <fields>
        <fullName>CN_Change_Request_Field_Name__c</fullName>
        <label>CN_Change_Request_Field_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Change_Request_Record_Type__c</fullName>
        <label>CN_Change_Request_Record_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Field_Name__c</fullName>
        <label>CN_Field_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CN_Is_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Object_Name__c</fullName>
        <label>CN_Object_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CN_Change_Request_Fields_Check</label>
    <pluralLabel>CN_Change_Request_Fields_Checks</pluralLabel>
</CustomObject>